--- a/SplunkForNCircle/default/data/ui/views/ncircle__job_scheduled.xml
+++ b/SplunkForNCircle/default/data/ui/views/ncircle__job_scheduled.xml
@@ -1,7 +1,7 @@
 <form>
   <label>nCircle - Scan Profiles</label>
-  <fieldset submitButton="false">
-    <input type="dropdown" token="tkProfile" searchWhenChanged="true">
+  <fieldset submitButton="true">
+    <input type="dropdown" token="tkProfile" searchWhenChanged="false">
       <label>Select Profile Name:</label>
       <search>
         <query>earliest=-180d `vuln_splunk_server` `vuln_index` `vuln_sourcetype` source=*getActiveScans.py | fields scanProfile.name | dedup scanProfile.name | sort scanProfile.name</query>
@@ -10,13 +10,26 @@
       </search>
       <fieldForLabel>scanProfile.name</fieldForLabel>
       <fieldForValue>scanProfile.name</fieldForValue>
+      <choice value="*">ALL</choice>
+    </input>
+    <input type="text" token="tkNetworkName">
+      <label>Search in network.name:</label>
+      <default>*</default>
+    </input>
+    <input type="text" token="tkNetworkInclude" searchWhenChanged="false">
+      <label>Search in network.include:</label>
+      <default>*</default>
+    </input>
+    <input type="text" token="tkNetworkExclude" searchWhenChanged="false">
+      <label>Search in network.exclude:</label>
+      <default>*</default>
     </input>
   </fieldset>
   <row>
     <panel>
       <table>
         <search>
-          <query>`vuln_splunk_server` `vuln_index` `vuln_sourcetype` source=*getActiveScans.py scanProfile.name="$tkProfile$" | rename scanProfile.profile.scanProfile.@timezone as timezone, scanProfile.profile.scanProfile.@type as type, scanProfile.profile.scanProfile.constraints.scanWindow.@start as start, scanProfile.profile.scanProfile.constraints.scanWindow.@end as end, scanProfile.profile.scanProfile.constraints.scanFrequency.byMonth.@daysOfMonth as DayOfMonth | table scanProfile.name, timezone, type, DayOfMonth, start, end, network.include, network.exclude | dedup scanProfile.name, timezone, type, DayOfMonth, start, end, network.include, network.exclude</query>
+          <query>`vuln_splunk_server` `vuln_index` `vuln_sourcetype` source=*getActiveScans.py scanProfile.name="$tkProfile$" network.name="*$tkNetworkName$*" network.include="*$tkNetworkInclude$*" network.exclude="*$tkNetworkExclude$*" | rename scanProfile.profile.scanProfile.@timezone as timezone, scanProfile.profile.scanProfile.@type as type, scanProfile.profile.scanProfile.constraints.scanWindow.@start as start, scanProfile.profile.scanProfile.constraints.scanWindow.@end as end, scanProfile.profile.scanProfile.constraints.scanFrequency.byMonth.@daysOfMonth as DayOfMonth | table scanProfile.name, timezone, type, DayOfMonth, start, end, network.name, network.include, network.exclude | dedup scanProfile.name, timezone, type, DayOfMonth, start, end, network.name, network.include, network.exclude</query>
           <earliest>-180d</earliest>
           <latest>now</latest>
         </search>
