--- a/SplunkForNCircle/default/data/ui/views/ncircle__calendar_view.xml
+++ b/SplunkForNCircle/default/data/ui/views/ncircle__calendar_view.xml
@@ -20,7 +20,7 @@
 					"managerid": "calSearch",                     
 					"valueField": "network.name",                     
 					"dateField": "day",                    
-					"destFormField": "tkProfile",
+					"destFormField": "tkNetworkName",
 					"linkUrl": "ncircle__job_scheduled"                   
 				}'>
             </div>
