--- a/SplunkForNCircle/default/data/ui/views/ncircle__job_scheduled.xml
+++ b/SplunkForNCircle/default/data/ui/views/ncircle__job_scheduled.xml
@@ -11,6 +11,7 @@
       <fieldForLabel>scanProfile.name</fieldForLabel>
       <fieldForValue>scanProfile.name</fieldForValue>
       <choice value="*">ALL</choice>
+      <default>*</default>
     </input>
     <input type="text" token="tkNetworkName">
       <label>Search in network.name:</label>
